--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
 </head>
+
 <body>
-    
+    <h1>I can push to github</h1>
+    <h3>dklsafjkalsdkfl</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt corporis nam odit omnis aliquid tempora, illum
+        eius voluptas fugit cupiditate, et, aperiam perferendis. Saepe quaerat est sunt deleniti. Autem, rem.</p>
 </body>
+
 </html>
