--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <h3>dklsafjkalsdkfl</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt corporis nam odit omnis aliquid tempora, illum
         eius voluptas fugit cupiditate, et, aperiam perferendis. Saepe quaerat est sunt deleniti. Autem, rem.</p>
+
+        <img src="image01.jpg" alt="">
+        <img src="image02.jpg" alt="">
 </body>
 
 </html>
