--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <img src="image01.jpg" alt="">
         <img src="image02.jpg" alt="">
+        <img src="image-03.jpeg" alt="">
 </body>
 
 </html>
