--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt corporis nam odit omnis aliquid tempora, illum
         eius voluptas fugit cupiditate, et, aperiam perferendis. Saepe quaerat est sunt deleniti. Autem, rem.</p>
 
-        <img src="image01.jpg" alt="">
-        <img src="image02.jpg" alt="">
-        <img src="image-03.jpeg" alt="">
+    <img src="image01.jpg" alt="">
+    <img src="image02.jpg" alt="">
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae nulla et suscipit qui facere impedit
+            numquam distinctio voluptas! Dolor itaque voluptate iusto ab atque nihil, recusandae assumenda consequatur
+            aliquid consequuntur?</p>
+    </div>
+    <img src="image-03.jpeg" alt="">
 </body>
 
 </html>
