--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <img src="image01.jpg" alt="">
     <img src="image02.jpg" alt="">
     <div>
+        <h3>look, i can i write blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae nulla et suscipit qui facere impedit
             numquam distinctio voluptas! Dolor itaque voluptate iusto ab atque nihil, recusandae assumenda consequatur
             aliquid consequuntur?</p>
